package backend.post.http;

import lombok.Data;

@Data
public class GetImageResponse {
    private Long id;
    private String imageUrl;
}
