@startuml

'!theme plain
top to bottom direction
skinparam linetype ortho

class Post {
  - content: String
  - comments: List<Comment>
  - user: User
  - id: Long
  - title: String
  - images: List<PostImage>
  + getUser(): User
  + getId(): Long
  + getTitle(): String
  + getContent(): String
  + getImages(): List<PostImage>
  # canEqual(Object): boolean
  + setContent(String): void
  + getComments(): List<Comment>
  + equals(Object): boolean
  + setId(Long): void
  + setUser(User): void
  + hashCode(): int
  + toString(): String
  + setComments(List<Comment>): void
  + setImages(List<PostImage>): void
  + setTitle(String): void
  + Post(): 
}
class PostController {
  - logger: Logger
  - userService: UserService
  - objectMapper: ObjectMapper
  - postService: PostService
  + getAllPosts(): ResponseEntity<List<GetResponse>>
  + deleteAllPosts(): ResponseEntity<?>
  + addPost(String, String, String, List<MultipartFile>): ResponseEntity<Post>
  + PostController(PostService, UserService): 
}
class PostImage {
  - id: Long
  - post: Post
  - url: String
  + getPost(): Post
  + getId(): Long
  + getUrl(): String
  + setId(Long): void
  + setUrl(String): void
  + setPost(Post): void
  + equals(Object): boolean
  # canEqual(Object): boolean
  + hashCode(): int
  + toString(): String
  + PostImage(): 
}
interface PostRepository << interface >>
class PostService {
  - postRepository: PostRepository
  + getAllPosts(): List<Post>
  + getPostById(Long): Post
  + deletePost(Long): void
  + deleteAllPosts(): void
  + savePost(Post): void
  + PostService(PostRepository): 
}

class http.GetImageResponse {
    - Long id
    - String imageUrl
}

class http.GetResponse {
    - Long id;
    - String title
    - String content
    - String username
    - List<GetImageResponse> images
}

Post           "1" *-[#595959,plain]-> "*" PostImage
PostController .> http
'PostController  -[#595959,dashed]->  Post
'PostController  -[#595959,dashed]->  PostImage
PostController "1" *-[#595959,plain]-> "1" PostService
PostController "1" *-[#595959,plain]-> "1" UserService
PostImage      "1" *-[#595959,plain]-> "1" Post
PostService    "1" *-[#595959,plain]-> "1" PostRepository
PostService ..> Post
PostService ..>PostImage
PostRepository ..> Post
PostRepository ..>PostImage
@enduml
